--- a/Workout/Index.html
+++ b/Workout/Index.html
@@ -26,8 +26,8 @@
             <!--login form-->
             <form id = "login_form">
    
-                <p id = username_label>Username</p>
-                <input id = "username_Login" type="text" id="username" name="username" placeholder="Username/Email">
+                <p id = username_label>Truck ID</p>
+                <input id = "username_Login" type="text" id="username" name="username" placeholder="Truck ID">
     
                 <br>
                 <p id = password_label>Password</p>
@@ -38,7 +38,7 @@
                 <button id = "login_Button" type="submit" name="button_login" value="Login" > Login <i class='fas fa-arrow-right'></i></button>
                 
             </form>
-            <h4>Don't have an account? <a href="">Sign Up</a></h4>
+            <h4>Having Problems? <a href="">Contact support</a></h4>
         </div>
     </div>
 </body>
